<resources>
    <string name="app_name">Senai</string>
    <string name="home_title">IoT App</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_on">Signon</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Olá!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be grather than 5 characters</string>
    <string name="login_failed">Username or Password are invalid</string>
    <string name="title_activity_home">Home</string>
    <string name="tab_text_1">Devices</string>
    <string name="tab_text_2">Dashboard</string>
    <string name="tab_text_3">Commands</string>
    <string name="tab_text_4">Configuration</string>
    <!-- Register Activity -->
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_sing_in_button">Sing in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="existent_username">Usuário já existe</string>
    <string name="invalid_request">Erro ao validar usuário</string>
</resources>